# arche

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.toml  shell.nix
.github/workflows/: benchmark.yml  release.yml  rust.yml
basic_engine/: Cargo.toml
basic_engine/benches/: benchmark.rs  iai.rs  my_benchmark.rs
basic_engine/proptest-regressions/: board.txt
basic_engine/src/: bad_engine.rs  bitboard.rs  board.rs  engine.rs  lib.rs  magic.rs  misc.rs  play.rs  pvt.rs  zorbrist.rs
proptest-regressions/basic_engine/: board.txt  misc.txt
src/: lib.rs  main.rs  uci.rs
src/basic_engine/: board.rs  misc.rs  mod.rs
