[package]
name = "basic_engine"
version = "0.1.0"
edition = "2021"

[lib]
bench = false #https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ["small_rng"]}
smallvec = "1.9.0"

[dev-dependencies]
proptest = "1.0.0"
criterion = "0.3"
pretty_assertions = "1.3.0"

[[bench]]
name = "benchmark"
harness = false
